updated structure for local data

--- a/Ozone_AQ_non_technical_report.ipynb
+++ b/Ozone_AQ_non_technical_report.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +51,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -148,34 +148,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "49"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "## Compile a list of all CA counties represented therein\n",
-    "## This list is valuable to me because it will be the benchmark of \n",
-    "## a \"complete\" counties list for future functions.\n",
+    "## if using the not local data, this is the list for the commented out code below\n",
     "\n",
-    "CA_OZ1 = oz_df[ (oz_df['State Code'] == 06)]['County Name'].unique()\n",
-    "CA_OZ2 = oz_df2[(oz_df2['State Code'] == 06)]['County Name'].unique()\n",
-    "CA_OZ3 = oz_df3[(oz_df3['State Code'] == 06)]['County Name'].unique()\n",
+    "with open('all_county_list.pkl', 'r') as picklefile:\n",
+    "    CA_County_full = pickle.load(picklefile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# ## Compile a list of all CA counties represented therein\n",
+    "# ## This list is valuable to me because it will be the benchmark of \n",
+    "# ## a \"complete\" counties list for future functions.\n",
     "\n",
-    "CA_all = list(CA_OZ1) + list(CA_OZ2) + list(CA_OZ3)\n",
-    "CA_County_full = list(set(CA_all))\n",
-    "len(CA_County_full)\n"
+    "# CA_OZ1 = oz_df[ (oz_df['State Code'] == 06)]['County Name'].unique()\n",
+    "# CA_OZ2 = oz_df2[(oz_df2['State Code'] == 06)]['County Name'].unique()\n",
+    "# CA_OZ3 = oz_df3[(oz_df3['State Code'] == 06)]['County Name'].unique()\n",
+    "\n",
+    "# CA_all = list(CA_OZ1) + list(CA_OZ2) + list(CA_OZ3)\n",
+    "# CA_County_full = list(set(CA_all))\n",
+    "# len(CA_County_full)\n"
    ]
   },
   {
@@ -193,19 +196,19 @@
    },
    "outputs": [],
    "source": [
-    "## returns list of counties in that sate with values above your threshold\n",
+    "# ## returns list of counties in that sate with values above your threshold\n",
     "\n",
-    "def get_worst_offenders_cnty(threshold, state_num):\n",
-    "    CA_OZ1 = oz_df[(oz_df['AQI']>threshold) & (oz_df['State Code'] == state_num)]['County Name'].unique()\n",
-    "    CA_OZ2 = oz_df2[(oz_df2['AQI']>threshold) & (oz_df2['State Code'] == state_num)]['County Name'].unique()\n",
-    "    CA_OZ3 = oz_df3[(oz_df3['AQI']>threshold) & (oz_df3['State Code'] == state_num)]['County Name'].unique()\n",
+    "# def get_worst_offenders_cnty(threshold, state_num):\n",
+    "#     CA_OZ1 = oz_df[(oz_df['AQI']>threshold) & (oz_df['State Code'] == state_num)]['County Name'].unique()\n",
+    "#     CA_OZ2 = oz_df2[(oz_df2['AQI']>threshold) & (oz_df2['State Code'] == state_num)]['County Name'].unique()\n",
+    "#     CA_OZ3 = oz_df3[(oz_df3['AQI']>threshold) & (oz_df3['State Code'] == state_num)]['County Name'].unique()\n",
     "    \n",
-    "    CA_all = list(CA_OZ1) + list(CA_OZ2) + list(CA_OZ3)\n",
-    "    CA_Counties = list(set(CA_all))\n",
-    "    return CA_Counties\n",
+    "#     CA_all = list(CA_OZ1) + list(CA_OZ2) + list(CA_OZ3)\n",
+    "#     CA_Counties = list(set(CA_all))\n",
+    "#     return CA_Counties\n",
     "\n",
-    "## CA counties in the most hazardous range\n",
-    "CA_Counties = get_worst_offenders_cnty(200, 06)"
+    "# ## CA counties in the most hazardous range\n",
+    "# CA_Counties = get_worst_offenders_cnty(200, 06)"
    ]
   },
   {
@@ -283,13 +286,26 @@
    },
    "outputs": [],
    "source": [
-    "##make a mega DF and process it for time series\n",
+    "# ##make a mega DF and process it for time series\n",
     "\n",
-    "CA_df_15 = oz_df[oz_df['State Code'] == 06]\n",
-    "CA_df_14 = oz_df2[oz_df2['State Code'] == 06]\n",
-    "CA_df_13 = oz_df3[oz_df3['State Code'] == 06]\n",
-    "CA_3y_df = pd.concat([CA_df_13, CA_df_14, CA_df_15], ignore_index=True)\n",
-    "CA_3y_df = CA_3y_df.set_index(pd.to_datetime(CA_3y_df['Date Local']))\n"
+    "# CA_df_15 = oz_df[oz_df['State Code'] == 06]\n",
+    "# CA_df_14 = oz_df2[oz_df2['State Code'] == 06]\n",
+    "# CA_df_13 = oz_df3[oz_df3['State Code'] == 06]\n",
+    "# CA_3y_df = pd.concat([CA_df_13, CA_df_14, CA_df_15], ignore_index=True)\n",
+    "# CA_3y_df = CA_3y_df.set_index(pd.to_datetime(CA_3y_df['Date Local']))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# This is a way to run the repo from a local, reduced data file. \n",
+    "\n",
+    "CA_3y_df = pd.read_csv('all_CA_ozone_monthly_data.csv')"
    ]
   },
   {
